--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar">
-    <div class="logo">YourLogo</div>
+    <div class="logo">StudyZone</div>
 
     <!-- Hamburger icon for small screens -->
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
