build up video page

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,11 @@
-<!-- footer.html -->
 <footer>
+  <div class="container">
     <p>&copy; 2025 StudyZone. All rights reserved.</p>
-  </footer>
-  
+    <div class="footer-links">
+      <a href="index.html">Home</a>
+      <a href="videos.html">Videos</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </div>
+  </div>
+</footer>
