--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,52 @@
     <!--------------------------------------------------------------------- Footer will be loaded here --------------------------------------------------------------------->
     <div id="header"></div>
 
+
+    <!--------------------------------------------------------------------- Middle part --------------------------------------------------------------------->
+
+    <main class="container">
+    <section class="contact-section" style="padding: 2rem 1rem;">
+      <h2 style="text-align:center; color:#007bff;">Contact Us</h2>
+
+      <div class="contact-wrapper" style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: center;">
+
+        <!-- Contact Form -->
+        <form class="contactForm" style="flex: 1; min-width: 300px;" onsubmit="return false;">
+          <label for="name">Name</label><br>
+          <input type="text" id="name" placeholder="Your Name" required><br><br>
+
+          <label for="email">Email</label><br>
+          <input type="email" id="email" placeholder="Your Email" required><br><br>
+
+          <label for="message">Message</label><br>
+          <textarea id="message" placeholder="Your Message" rows="5" required></textarea><br><br>
+
+          <button type="submit" style="background-color: #007bff; color: white; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer;">Send Message</button>
+        </form>
+
+        <!-- Add this message box -->
+<div id="formMessage" style="margin-top: 15px; color: green;"></div>
+
+        <!-- Contact Info -->
+        <div class="contact-info" style="flex: 1; min-width: 250px;">
+          <h3>Get in Touch</h3>
+          <p><strong>Email:</strong> studyzone@example.com</p>
+          <p><strong>Phone:</strong> +91 98765 43210</p>
+          <p><strong>Location:</strong> Gujarat, India</p>
+
+          <!-- Optional: Embed Google Map -->
+          <div style="margin-top: 1rem;">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!..."
+              width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
     
 
 
