--- a/history.html
+++ b/history.html
@@ -106,11 +106,50 @@
     <!-- Footer will be loaded here -->
     <footer id="footer"></footer>
 
+    <!-- Load YouTube IFrame API -->
+    <script>
+        // Load the YouTube IFrame API asynchronously
+        var tag = document.createElement('script');
+        tag.src = 'https://www.youtube.com/iframe_api';
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    </script>
+
     <!-- Video.js -->
     <script src="https://vjs.zencdn.net/8.10.0/video.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/3.0.1/Youtube.min.js"></script>
+
+    <!-- Load configuration first -->
     <script src="js/video-config.js"></script>
-    <!-- External JavaScript Files -->
+
+    <!-- Load main application script -->
+    <script>
+        // Initialize video player when YouTube API is ready
+        function onYouTubeIframeAPIReady() {
+            console.log('YouTube API is ready');
+        }
+
+        // Initialize the application when the page is loaded
+        document.addEventListener('DOMContentLoaded', function () {
+            console.log('DOM fully loaded');
+            // Initialize the video player
+            if (typeof initPlayer === 'function') {
+                initPlayer();
+            }
+
+            // Set up teacher handlers
+            if (typeof setupTeacherHandlers === 'function') {
+                setupTeacherHandlers();
+            }
+
+            // Initialize teachers data
+            if (typeof initTeachersData === 'function') {
+                initTeachersData();
+            }
+        });
+    </script>
+
+    <!-- Load subject page scripts -->
     <script src="js/subjectpage.js"></script>
 </body>
 </html>
